.feat ajout de participant et stand dans une kermesse
